# AIEarningsAnalyst

./: .env.example  .gitignore  Dockerfile  INTERVIEW_PROJECT_BRIEF.md  README.md  pyproject.toml  render.yaml  requirements.txt  run.sh
.streamlit/: config.toml
backend/: config.py  database.py  main.py
backend/api/: analyst.py  dashboard.py
backend/models/: __init__.py  claim.py  company.py  financial_data.py  transcript.py
backend/schemas/: claim.py  extraction.py
backend/services/: pipeline.py
backend/utils/: text.py
data/: companies.json  fool_transcript_urls.json
data/claims/: AAPL_Q1_2025_claims.json  AAPL_Q2_2025_claims.json  AAPL_Q3_2025_claims.json  AAPL_Q4_2025_claims.json  AMZN_Q1_2025_claims.json  AMZN_Q2_2025_claims.json  AMZN_Q3_2025_claims.json  AMZN_Q4_2025_claims.json  GOOGL_Q1_2025_claims.json  GOOGL_Q2_2025_claims.json  GOOGL_Q3_2025_claims.json  GOOGL_Q4_2025_claims.json  JNJ_Q1_2025_claims.json  JNJ_Q2_2025_claims.json  JNJ_Q3_2025_claims.json  (+25 more)
frontend/: app.py
scripts/: analyze_unverifiable.py  build_rag_index.py  fetch_sec_financials.py  run_pipeline.py  scrape_fool_transcript_urls.py  scrape_mlq_transcripts.py  seed_companies.py
tests/: test_analyst_flagged_fallback.py  test_compute.py  test_extractor_force_cache.py  test_fmp_period_keys.py  test_llm_extractor_context.py  test_normalizer.py  test_period_resolver.py  test_pipeline_verification.py  test_rag_flagged_queries.py  test_rag_retrieval.py  test_sec_client.py  test_tolerances.py  test_transcript_client_mlq.py  test_verdict_engine_gaps.py  test_verdict_period_alias.py
(+112 files in other folders)
