[project]
name = "earnings-verifier"
version = "1.0.0"
description = "Automated earnings call claim verification system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "streamlit>=1.38.0",
    "pandas>=2.1.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "earningscall>=0.0.19",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
